apps/base/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    toolkit.fluxcd.io/tenant: dev-team
